@@ -67,6 +67,7 @@ struct gen7_mfd_context
 
     union {
         VAIQMatrixBufferMPEG2 mpeg2;
+        VAIQMatrixBufferH264  h264;     /* flat scaling lists (default) */
     } iq_matrix;
 
     GenFrameStore       reference_surface[MAX_GEN_REFERENCE_FRAMES];
